--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,9 @@ $silver: #f8f8f8;
 
 	background-size: cover;
 	background-repeat: no-repeat;
+
+	color: $not-black-but-dark;
+	font-family: monospace;
 }
 
 //MIXIN
@@ -35,7 +38,7 @@ main {
 	//overflow-x: hidden;
 	height: 100vh;
 	width: 100%;
-	background-color: lightcoral;
+	background-color: $silver;
 	@include flexcenter();
 
 	.main-wrapper {
@@ -43,29 +46,161 @@ main {
 		flex-direction: column;
 		display: inline-block;
 
-		padding: 70px;
-		border-radius: 20px;
+		padding: 60px 70px;
 
-		background-color: lightgreen;
+		background-color: $silver;
+		border: 1.5px solid $not-black-but-dark;
+
+		.title {
+			margin-bottom: 40px;
+			text-align: center;
+
+			font-size: 2rem;
+			font-weight: 900;
+		}
 
 		.display-wrapper {
 			height: 50px;
-			//width: 200px;
-			background-color: lightblue;
+			margin-bottom: 60px;
 			@include flexcenter();
 
 			.display {
-				height: 100%;
+				height: 50px;
 				width: 100%;
-				background-color: lightsalmon;
+				background-color: $silver;
+
+				padding: 0 20px;
+				line-height: 45px;
+
+				font-size: 1.5rem;
+				letter-spacing: 1.5px;
+
+				border: 1.5px solid $not-black-but-dark;
+				outline: none;
+			}
+
+			#copy {
+				margin-left: 10px;
+				padding: 9px;
+				height: 75%;
+				outline: none;
+				border: 1.5px solid $not-black-but-dark;
+				background-color: $gray;
+				@include flexcenter();
+
+				img {
+					height: 15px;
+				}
+
+				&:hover {
+					cursor: pointer;
+					background-color: $not-black-but-dark;
+				}
 			}
 		}
 
 		form {
-			background-color: lightseagreen;
 			display: grid;
-			grid-template-columns: auto auto;
-			gap: 20px;
+			grid-template-columns: auto 200px;
+			//gap: 20px;
+			row-gap: 30px;
+			column-gap: 50px;
+
+			label {
+				font-size: 1.4rem;
+				//background-color: lightblue;
+			}
+
+			#length {
+				-webkit-appearance: none;
+				width: 100%;
+				height: 5px;
+				background: #d3d3d3;
+				outline: none;
+				-webkit-transition: 0.2s;
+				transition: opacity 0.2s;
+			}
+
+			#length::-webkit-slider-thumb {
+				-webkit-appearance: none;
+				appearance: none;
+				width: 20px;
+				height: 20px;
+				background-color: $gray;
+				border: 1.5px solid $gray;
+				cursor: pointer;
+			}
+
+			#length::-moz-range-thumb {
+				width: 20px;
+				height: 20px;
+				background-color: $gray;
+				border: 1.5px solid $gray;
+				cursor: pointer;
+			}
+
+			button {
+				margin-top: 30px;
+				grid-column: span 2;
+				padding: 15px;
+
+				outline: none;
+
+				font-weight: 700;
+				font-size: 1.3rem;
+				letter-spacing: 2px;
+
+				border: 2px solid $not-black-but-dark;
+
+				background-color: $not-black-but-dark;
+				color: $silver;
+
+				&:hover {
+					cursor: pointer;
+
+					background-color: $silver;
+					color: $not-black-but-dark;
+				}
+			}
 		}
+	}
+}
+
+.checkbox {
+	display: flex;
+	align-items: center;
+
+	input[type='checkbox'] {
+		height: 0;
+		width: 0;
+		visibility: hidden;
+	}
+
+	label {
+		cursor: pointer;
+		text-indent: -9999px;
+		width: 50px;
+		height: 25px;
+		background: $gray;
+		display: block;
+		border-radius: 0px;
+		position: relative;
+	}
+
+	label:after {
+		content: '';
+		position: absolute;
+		top: 5px;
+		left: 5px;
+		width: 15px;
+		height: 15px;
+		background: #fff;
+		border-radius: 0px;
+		transition: 0.3s;
+	}
+
+	input:checked + label:after {
+		left: calc(100% - 5px);
+		transform: translateX(-100%);
 	}
 }
