--- a/style.scss
+++ b/style.scss
@@ -80,21 +80,25 @@ main {
 			}
 
 			#copy {
-				margin-left: 10px;
-				padding: 9px;
-				height: 75%;
+				height: 100%;
+				padding: 0 10px;
 				outline: none;
 				border: 1.5px solid $not-black-but-dark;
+				border-left: none;
 				background-color: $gray;
 				@include flexcenter();
 
 				img {
-					height: 15px;
+					height: 20px;
 				}
 
 				&:hover {
 					cursor: pointer;
-					background-color: $not-black-but-dark;
+					background-color: $silver;
+
+					img {
+						filter: invert(1);
+					}
 				}
 			}
 		}
@@ -203,56 +207,4 @@ main {
 		left: calc(100% - 5px);
 		transform: translateX(-100%);
 	}
-}
-
-//
-
-//
-
-//
-
-//
-
-//
-.switch {
-	position: relative;
-	display: inline-block;
-	width: 60px;
-	height: 34px;
-}
-
-.switch input {
-	opacity: 0;
-	width: 0;
-	height: 0;
-}
-
-.slider {
-	position: absolute;
-	cursor: pointer;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: #ccc;
-	-webkit-transition: 0.4s;
-	transition: 0.4s;
-}
-
-.slider:before {
-	position: absolute;
-	content: '';
-	height: 26px;
-	width: 26px;
-	left: 4px;
-	bottom: 4px;
-	background-color: white;
-	-webkit-transition: 0.4s;
-	transition: 0.4s;
-}
-
-input:checked + .slider:before {
-	-webkit-transform: translateX(26px);
-	-ms-transform: translateX(26px);
-	transform: translateX(26px);
 }
