--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,7 @@ $silver: #f8f8f8;
 	background-size: cover;
 	background-repeat: no-repeat;
 
-	color: $not-black-but-dark;
+	color: $gray;
 	font-family: monospace;
 }
 
@@ -49,7 +49,7 @@ main {
 		padding: 60px 70px;
 
 		background-color: $silver;
-		border: 1.5px solid $not-black-but-dark;
+		border: 1.5px solid $gray;
 
 		.title {
 			margin-bottom: 40px;
@@ -75,7 +75,7 @@ main {
 				font-size: 1.5rem;
 				letter-spacing: 1.5px;
 
-				border: 1.5px solid $not-black-but-dark;
+				border: 1.5px solid $gray;
 				outline: none;
 			}
 
@@ -83,7 +83,7 @@ main {
 				height: 100%;
 				padding: 0 10px;
 				outline: none;
-				border: 1.5px solid $not-black-but-dark;
+				border: 1.5px solid $gray;
 				border-left: none;
 				background-color: $gray;
 				@include flexcenter();
@@ -154,16 +154,16 @@ main {
 				font-size: 1.3rem;
 				letter-spacing: 2px;
 
-				border: 2px solid $not-black-but-dark;
+				border: 2px solid $gray;
 
-				background-color: $not-black-but-dark;
+				background-color: $gray;
 				color: $silver;
 
 				&:hover {
 					cursor: pointer;
 
 					background-color: $silver;
-					color: $not-black-but-dark;
+					color: $gray;
 				}
 			}
 		}
