--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,8 @@ $silver: #f8f8f8;
 
 	color: $gray;
 	font-family: monospace;
+
+	transition: background-color 1000ms, border-color 1000ms, color 1000ms;
 }
 
 //MIXIN
@@ -40,6 +42,19 @@ main {
 	width: 100%;
 	background-color: $silver;
 	@include flexcenter();
+
+	.dark-mode-btn {
+		position: absolute;
+		top: 40px;
+		left: 40px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+
+		p {
+			margin-top: 10px;
+		}
+	}
 
 	.main-wrapper {
 		@include flexcenter();
@@ -86,10 +101,12 @@ main {
 				border: 1.5px solid $gray;
 				border-left: none;
 				background-color: $gray;
+				transition: background-color 0ms, border-color 1000ms;
 				@include flexcenter();
 
 				img {
 					height: 20px;
+					transition-duration: 0ms;
 				}
 
 				&:hover {
@@ -106,13 +123,23 @@ main {
 		form {
 			display: grid;
 			grid-template-columns: auto 200px;
-			//gap: 20px;
 			row-gap: 30px;
 			column-gap: 50px;
+			background-color: $silver;
 
 			label {
 				font-size: 1.4rem;
-				//background-color: lightblue;
+			}
+
+			.range-wrapper {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				span {
+					margin-left: 10px;
+					font-size: 1.2rem;
+				}
 			}
 
 			#length {
@@ -131,7 +158,7 @@ main {
 				width: 20px;
 				height: 20px;
 				background-color: $gray;
-				border: 1.5px solid $gray;
+				border: 1.5px solid $silver;
 				cursor: pointer;
 			}
 
@@ -158,6 +185,7 @@ main {
 
 				background-color: $gray;
 				color: $silver;
+				transition: background-color 0ms, border-color 1000ms;
 
 				&:hover {
 					cursor: pointer;
@@ -198,7 +226,8 @@ main {
 		left: 5px;
 		width: 15px;
 		height: 15px;
-		background: #fff;
+		background: #f8f8f8;
+		//border: 1px solid $gray;
 		border-radius: 0px;
 		transition: 0.3s;
 	}
